samples/_failures_safe/1761362776_ecf7ba_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5ae78343.c: In function ‘main’:
./samples/SAFE/__tmp_5ae78343.c:168:5: error: expected declaration or statement at end of input
  168 |     }
      |     ^
